postgre-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    name: postgres-deployment
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      type: backend
  template:
    metadata:
      labels:
        name: postgres-pod
        type: backend
    spec:
      containers:
        - name: postgres-container
          image: postgres:15.4  # Specify a specific image tag
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "500m"
