redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisapp-deployment
  labels:
    name: redisapp-deployment
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redisapp-pod
      type: backend
  template:
    metadata:
      labels:
        name: redisapp-pod
        type: backend
    spec:
      containers:
        - name: redisapp
          image: redis:latest
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
