votingapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deployment
  labels:
    name: voting-app-deployment
    type: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: voting-app-pod
      type: frontend
  template:
    metadata:
      labels:
        name: voting-app-pod
        type: frontend
    spec:
      containers:
        - name: voting-app
          image: lanre99/votingapp:v2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
