votingappresult-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votingappresult-deployment
  labels:
    name: votingappresult-deployment
    type: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: votingappresult-pod
      type: frontend
  template:
    metadata:
      labels:
        name: votingappresult-pod
        type: frontend
    spec:
      containers:
        - name: votingappresult
          image: lanre99/votingappresult:v2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "500m"
