workerapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workerapp-deployment
  labels:
    name: workerapp-deployment
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-pod
      type: backend
  template:
    metadata:
      labels:
        name: worker-pod
        type: backend
    spec:
      containers:
        - name: worker-container
          image: lanre99/votingworkers:v2
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
