postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: postgres-service
    type: backend
spec:
  selector:
    name: postgres-pod
    type: backend
  ports:
    - port: 5432
      targetPort: 5432
