redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redisapp-service
    type: backend
spec:
  selector:
    name: redisapp-pod
    type: backend
  ports:
    - port: 6379
      targetPort: 6379
