votingapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
  labels:
    name: voting-app-service
    type: frontend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /

spec:
  type: LoadBalancer
  selector:
    name: voting-app-pod
    type: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30006
