votingappresult-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: votingappresult-service
  labels:
    name: votingappresult-service
    type: frontend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /result
spec:
  type: LoadBalancer
  selector:
    name: votingappresult-pod
    type: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
